# JudgeLab

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  LOCAL_SETUP.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  sonar-project.properties  start-local.bat  start-local.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  security.yml
agent-win/: JudgeLabAgent.csproj  MainForm.cs  Program.cs  ai-signatures.json  appsettings.json
agent-win/Services/: ConfigurationService.cs  IConfigurationService.cs  IIntegrityMonitor.cs  IntegrityMonitor.cs  ServiceStubs.cs
apps/api/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/api/v1/: router.py
apps/api/api/v1/endpoints/: attempts.py  auth.py  gamification.py  integrity.py  problems.py  submissions.py
apps/api/core/: config.py  database.py  security.py
apps/api/models/: __init__.py  attempt.py  gamification.py  integrity.py  problem.py  settings.py  submission.py  user.py
apps/api/schemas/: __init__.py  attempt.py  integrity.py  problem.py  submission.py  user.py
apps/api/scripts/: seed_data.py
apps/api/services/: judge.py  problem.py  user.py
apps/api/tests/: test_auth.py
apps/web/: .env.example  .eslintrc.json  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
docs/: CONTRIBUTING.md  QUICKSTART.md  ROADMAP.md  SECURITY.md
infra/docker/: cpp-judge.dockerfile  python-judge.dockerfile
infra/nginx/: nginx.conf
infra/postgres/: init.sql
worker/: .env.example  Dockerfile  config.py  database.py  main.py  models.py  requirements.txt
worker/judge/: checker.py  executor.py
worker/tasks/: __init__.py  judge_submission.py
worker/tests/: test_judge.py
(+14 files in other folders)
